Use removeFirst() instead of remove(0)